# GUTTERS

./: -----BEGIN PRIVATE KEY-----  .auto-activate.sh  .envrc  .gitignore  .watchmanconfig  CONTRIBUTING.md  COUNCIL_BEFORE_AFTER_PHASE27.md  COUNCIL_INTERFACE_UPGRADE_PHASE27.md  COUNCIL_QUICK_WINS_IMPLEMENTATION.md  DEBUG_APPLE_PUSH.md  E501_FIX_INSTRUCTIONS.md  LINT_FIXES_AUDIT_REPORT.md  MIGRATION_STATUS.md  NAVIGATION_FIXES.md  OBSERVER_CYCLICAL_PATTERNS_ARCHITECTURE.md  PHASE_28_ORACLE_COMPLETE.md  PUSH_NOTIFICATION_COMPREHENSIVE_ANALYSIS.md  PUSH_NOTIFICATION_DEPLOYMENT_GUIDE.md  PUSH_NOTIFICATION_ISSUE_SUMMARY.md  QUEST_API_DEBUG.md  QUEST_VISIBILITY_FIXES_SUMMARY.md  README.md  VAPID_DEBUG_COMPREHENSIVE_REPORT.md  VAPID_DEPLOYMENT_CHECKLIST.md  VENV_SETUP.md  WEIGHTED_CONFIDENCE_ARCHITECTURE.md  WORKSPACE_SETUP.md  activate.bat  activate.sh  check_db_constraints.py  check_pgvector.py  check_profiles.py  check_quest_visibility.py  check_tracking_db.py  check_users.py  cleanup_users.py  convert_vapid_keys.py  create_oracle_table.py  debug_db.py  debug_log.txt  (+53 more)
.agent/: AGENT.md
.agent/workflows/: migrate-to-pnpm.md
.claude/: settings.local.json
.github/: COPILOT-MIGRATION-PROMPTS.md  COPILOT-MIGRATION-PROTOCOL.md  COPILOT-UPGRADE-ADDENDUM.md  COPILOT-UPGRADE.md  copilot-instructions.md
app/: _layout.tsx
app/(tabs)/: _layout.tsx  dashboard.tsx  index.tsx  two.tsx
app/genesis/: _layout.tsx  index.tsx
app/settings/: _layout.tsx  hrm.tsx  index.tsx  models.tsx  modules.tsx  profiles.tsx
apps/api/: MIGRATION_STATUS.md  main.py  requirements.txt  test_completion_flow.py  test_contract_validation.py  test_digital_twin.py  test_digital_twin_integration.py  test_genesis_api.py  test_genesis_full_flow.py  test_genesis_opening.py  test_live_system.py  test_sovereign_agent.py
attached_assets/: Pasted--PROJECT-VISION-CONTEXT-This-is-Project-Sovereign-also-called-The-Collapse-OS-an-AI-nat-1764368760902_1764368760903.txt  Pasted-You-are-the-Frontend-Sovereign-Architect-CURRENT-STATUS-The-FastAPI-Backend-is-COMPLETE-1764371441210_1764371441210.txt  Pasted-You-are-the-Grand-Architect-operating-at-the-absolute-bleeding-edge-of-late-2025-technology--1764368776201_1764368776202.txt  Pasted-You-are-the-integration-engineer-for-Project-Sovereign-Work-inside-the-existing-Expo-Tamagui-La-1764368747293_1764368747293.txt  test_openrouter.py
components/: ChatInterface.js  CurrentToast.js  GlobalAgentShell.tsx  GlobalOverlayProvider.tsx  Provider.js
components/genesis/: GenerativeRenderer.tsx  PulsingBorder.tsx  ReflexTapComponent.tsx  index.ts
crudadmin_data/: admin.db
docs/: COUNCIL_ENHANCEMENT_OPPORTUNITIES.md  COUNCIL_OF_SYSTEMS.md  EXTENSION_GUIDE.md  ICHING_GENE_EXTRACTION.md  SESSION_ACHIEVEMENTS.md  manifesto.md  module-preferences.md  nervous_system.md
docs/legacy/: index.md
frontend/: Dockerfile  LAYOUT_FIXES_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/dev-dist/: sw.js  workbox-f4a94c84.js
frontend/public/: manifest.json  sw-push.js
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
lib/: api-client.ts  constants.ts
lib/agents/: base-agent.js  (+1 more)
push-service/: .env.example  README.md  index.js  package.json  pnpm-lock.yaml
scripts/: CLEAR_PUSH_SUBSCRIPTIONS_README.md  check_db_tables.py  clear_push_subscriptions.py  diagnose_chat.py  final_system_audit.py  generate_vapid_keys_base64.py  inspect_subscription.py  inspect_vapid_headers.py  seed_data.py  seed_telemetry.py  start-with-tunnel.js  test_actual_send.py  test_imports.py  test_journalist.py  test_real_push_endpoint.py  test_vapid_locally.py  verify_evolution.py  verify_microservice_auth.py  verify_push_fix.py  verify_sse_wiring.py
src/: gutters_interactive_demo.py  private_key.pem  public_key.pem
src/app/: main.py  (+1 more)
test_output/: test_errors.txt  test_errors_v2.txt  test_errors_v3.txt  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_chat_debug.txt  test_output_error.txt  test_output_final.txt  test_output_final_final.txt  test_output_integrity.txt  test_output_keyerror.txt  test_output_last.txt  test_output_metadata.txt  test_output_persistent.txt  test_output_really_final.txt  test_output_run_6.txt  test_output_run_8.txt  test_output_single.txt  test_output_v2.txt  test_output_v4.txt  test_result.txt  test_results.txt  test_results_2.txt  test_results_3.txt  test_results_4.txt  test_results_5.txt
tests/: conftest.py  test_conftest_seeded.py  test_quest_audit.py  test_quests_integration.py
(+634 files in other folders)
